# claude-remote

./: CLAUDE.md  Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: connection.rs  lib.rs  main.rs
crates/client/tests/: integration.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: claude.rs  lib.rs  wire.rs
crates/server/: Cargo.toml
crates/server/src/: approval.rs  claude_process.rs  main.rs  tls.rs
