[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Alessio Deiana <adeiana@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TLS/Crypto
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
rcgen = "0.13"
x509-parser = "0.17"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# GUI
iced = { version = "0.13", features = ["tokio"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
directories = "6"
toml = "0.8"

# Testing
tempfile = "3"

# Internal crates
claude-remote-common = { path = "crates/common" }
claude-remote-protocol = { path = "crates/protocol" }

# External libs
tofu-mtls = { git = "https://github.com/Osso/tofu-mtls" }

[profile.release]
lto = false
incremental = true
