[package]
name = "claude-remote-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "claude_remote_client"
path = "src/lib.rs"

[[bin]]
name = "claude-remote"
path = "src/main.rs"

[dependencies]
claude-remote-common = { workspace = true }
claude-remote-protocol = { workspace = true }
tofu-mtls = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
