[package]
name = "claude-remote-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tofu-mtls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
