[package]
name = "claude-remote-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "claude-remote-server"
path = "src/main.rs"

[dependencies]
claude-remote-common = { workspace = true }
claude-remote-protocol = { workspace = true }
tofu-mtls = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
iced = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
